# cm-docs

./: .gitignore  CLAUDE.md  DeployManual.md  Download-All-Dependencies.ps1  GEMINI.md  Jenkinsfile  PR_HISTORY.md  README.md  SVN_SETUP_GUIDE.md  app.py  app_backup.py  config.example.json  config.ini  config.json  create-deploy-package.ps1  create-deploy-package.sh  download-all-dependencies.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  stop-dev.sh  test_url_protocol.html
.claude/: settings.local.json
autodoc_service/: CLAUDE.md  Jenkinsfile  README.md  parsed_data.json  pyproject.toml  pytest.ini  requirements.txt  run_autodoc_service.ps1  run_autodoc_service.py  run_autodoc_service.sh  test_complete_workflow.py  test_enhanced_word.py  test_final_comparison.py  test_label_based_word.py  test_payload.json  test_word_payload.py
autodoc_service/app/: __init__.py  logging_config.py  main.py  models.py
autodoc_service/app/parsers/: itsupp_html_parser.py
autodoc_service/app/services/: excel_enhancer.py  excel_list_builder.py  excel_test_builder.py  filename.py  font_styler.py  label_based_word_builder.py  paths.py  word_builder.py  word_payload.py
autodoc_service/app/tests/: test_api_build_docs.py  test_api_parse_only.py  test_builder_excel_list.py  test_builder_excel_test.py  test_builder_word.py  test_builder_word_label.py  test_fastapi_integration.py  test_logging_system.py  test_parser_itsupp.py  test_templates_present.py
autodoc_service/app/tests/fixtures/: __init__.py  itsupp_sample.json  sample_itsupp.html  규격 확정일자.html
autodoc_service/documents/: [250807 김용진] 변경관리요청서 울산 생산관리(OLIVE)_20250801_1 [자체 개선]Drum 재고 관리 쿼리 튜닝 2차(원본).docx  [250807 김용진] 변경관리요청서 울산 설비통합관리(MTMS)_20250725_1 [Bug 개선] 장치설비 ITEM 검색 로직 수정(원본).docx  [250807 이대경] 변경관리요청서 울산 생산관리(OLIVE)_20250731_1 [Bug 개선] 충유오더 조회 화면 출력 기능 개선(생산노드만 표시)(원본).docx  [250807 이대경] 변경관리요청서 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선(원본).docx  [250814 이대경] 변경관리요청서 울산 실험정보(LIMS) 2025 0728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선.docx  [250814 처리자] 변경관리요청서 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선.docx  [250814 처리자] 테스트시나리오 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선.xlsx  [250815 이대경] 변경관리요청서 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선.docx  [250815 이대경] 변경관리요청서 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선_1.docx  [250815 이대경] 변경관리요청서 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선_20.docx  [250815 이대경] 테스트시나리오 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선.xlsx  ~$50815 이대경] 변경관리요청서 울산 실험정보(LIMS)_20250728_1 [Bug 개선] 시험의뢰 시 규격 확정일자에 최신 버전이 자동 매핑되도록 시스템 구조 개선_20.docx
autodoc_service/templates/: template.docm  template.docx  template.xlsm  template.xlsx  template_list.xlsm  template_list.xlsx
autodoc_service/testHTML/: Drum 재고 관리.html  장치설비.html  충유오더.html
cli/: Jenkinsfile  LICENSE  config.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
cli/.claude/: settings.local.json
cli/config/: config.ini
cli/scripts/: EnvVarUpdate.nsh  build.py  build_helper_app.py  helper_app.applescript  setup_win.nsi  testscenariomaker-cli-protocol-handler.sh  testscenariomaker-protocol.desktop  url_handler.ps1  validate_helper_app.sh
cli/src/ts_cli/: api_client.py  cli_handler.py  main.py
cli/src/ts_cli/core/: __init__.py  process_manager.py
cli/tests/: test_phase2_url_parsing.py  test_url_parsing.py
cli/tests/integration/: test_api_integration.py
cli/tests/unit/: test_api_client.py  test_cli_handler.py  test_config_loader.py  test_main_sync_features.py  test_svn_analyzer.py  test_vcs.py
webservice/: Jenkinsfile.backend  Jenkinsfile.frontend  README-migration.md  README.md  app_streamlit_backup.py  config.ci.json  config.json  config.test.json  init_deployment_cache.py  jest.config.js  pip.constraints.txt  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  test_config_paths.py  tsconfig.json  vite.config.ts
webservice/app/: __init__.py  main.py
webservice/app/api/: __init__.py
webservice/app/core/: __init__.py  config_loader.py  document_parser.py  excel_writer.py  git_analyzer.py  llm_handler.py  logging_config.py  paths.py  prompt_enhancer.py  prompt_loader.py  scenario_generator.py
webservice/app/data/: indexed_files_cache.json
webservice/app/services/: autodoc_client.py  excel_merger.py
webservice/backend/: feedback_export.json  main.py
webservice/backend/models/: files.py  rag.py  scenario.py
webservice/backend/routers/: feedback.py  files.py  rag.py  scenario.py
webservice/frontend/: .eslintrc.cjs  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
webservice/frontend/e2e/: README.md  full-generation-websocket.spec.ts  logging-system.spec.ts  v2-workflow.spec.ts
webservice/frontend/playwright-report/: index.html
webservice/frontend/src/: App.test.tsx  App.tsx  setupTests.ts
webservice/prompts/: final_prompt.txt
webservice/scripts/: download_embedding_model.py
webservice/src/: config_loader.py  excel_writer.py  feedback_manager.py  git_analyzer.py  llm_handler.py  logging_config.py  prompt_enhancer.py  prompt_loader.py
webservice/src/vector_db/: chroma_manager.py  document_chunker.py  document_indexer.py  document_reader.py  rag_manager.py
webservice/templates/: template.xlsx
webservice/tests/: config.json  conftest.py
webservice/tests/api/: conftest.py  test_feedback_api.py  test_files_api.py  test_rag_api.py  test_scenario_api.py
webservice/tests/e2e/: app-comparison.spec.ts  logging-system.spec.ts  v2-workflow.spec.ts
webservice/tests/integration/: test_workflow.py
webservice/tests/unit/: test_config_loader.py  test_config_paths.py  test_document_indexer_cache.py  test_excel_writer.py  test_feedback_manager.py  test_git_analyzer.py  test_llm_handler.py  test_v2_simple.py
(+175 files in other folders)
