[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodoc_service"
version = "0.1.0"
description = "HTML을 파싱하여 변경관리 문서를 자동 생성하는 서비스"
readme = "README.md"
requires-python = ">=3.12, <3.13" # CLAUDE.md에 명시된 버전
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "beautifulsoup4==4.12.3",
    "certifi==2025.8.3",
    "click==8.2.1",
    "dnspython==2.7.0",
    "email_validator==2.2.0",
    "et_xmlfile==2.0.0",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.8",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.27.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "Jinja2==3.1.6",
    "lxml==5.2.1",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "openpyxl==3.1.2",
    "orjson==3.11.2",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.7.0",
    "pydantic_core==2.18.1",
    "Pygments==2.19.2",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "python-docx==1.1.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.7",
    "PyYAML==6.0.2",
    "rich==14.1.0",
    "rich-toolkit==0.15.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.37.2",
    "typer==0.16.0",
    "typing_extensions==4.14.1",
    "ujson==5.10.0",
    "uvicorn==0.30.0",
    # "uvloop==0.21.0",  # Unix/Linux only - Windows not supported
    # "watchfiles==1.1.0",  # Unix/Linux only - Windows not supported
    "websockets==15.0.1"
]

[tool.setuptools.packages.find]
where = ["."]