[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webservice"
version = "0.1.0"
description = "Git 변경사항 분석 및 테스트 시나리오 생성 웹 서비스"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "chromadb==1.0.17",
    "sentence-transformers==5.1.0",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "GitPython==3.1.45",
    "requests==2.32.4",
    "pandas==2.3.1",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "pytest-cov==6.2.1",
    "httpx==0.28.1",
    "pytest-asyncio==1.1.0",
    "portalocker==3.2.0",
    "python-multipart==0.0.20",
    "websockets==15.0.1",
]

[tool.setuptools]
# 이 옵션이 non-python 파일(우리 경우엔 React 빌드 결과)을 포함하게 해줌
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
# config.json 파일을 패키지에 포함
"*" = ["config.json"]